--- a/style.css
+++ b/style.css
@@ -2,40 +2,143 @@ body {
     margin: 0;
     font-family: sans-serif;
 }
+    header {
+        background-color:rgb(0,132,87);
+    }
+        .externalNav {
+            width: 100%;
+            background-color: #333;
+        }
+            .externalNav ul {
+                list-style-type: none;
+                display: inline-block;
+                margin: 0;
+                padding: 0;
+            }
+                .externalNav ul li {
+                    float: left;
+                    padding: 10px 30px;
+                    border-right: 3px solid rgb(0,132,87);
+                    text-align: center;
+                }
+                    .externalNav ul li a {
+                        color: rgb(0,132,87);
+                        text-decoration: none;
+                    }
+        .hero {
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+        }
+            .title {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                margin-left: -50px;
+            }
+                header h1 {
+                    margin: 0;
+                    color: black;
+                    font-size: 4em;
+                    text-shadow: 2px 2px 5px;
+                    min-width: 800px;
+                }
+                header p {
+                    margin: 0;
+                    color: #212121;
+                    font-size: 3em;
+                    text-shadow: 1px 1px 5px;
+                    min-width: 800px;
+                }
+        .internalNav {
+            width: 100%;
+            background-color: #333;
+        }
+            .internalNav ul {
+                list-style-type: none;
+                display: inline-block;
+                margin: 0;
+                padding: 0;
+            }
+                .internalNav ul li {
+                    float: left;
+                    padding: 10px 30px;
+                    border-right: 3px solid rgb(0,132,87);
+                    text-align: center;
+                }
+                    .internalNav ul li a {
+                        color: rgb(0,132,87);
+                        text-decoration: none;
+                    }
 
-header {
-    position: relative;
-    background-color:rgb(0,132,87);
-    overflow: hidden;
 
-}
-header img {
-    width: 100vw;
-}
+    main {
+        border: 5px solid #34C2DE;
+        margin: 15px;
+        padding: 100px;
+        display: flex;
+        flex-direction: row;
+        color: #333;
+    }
+        .content {
+            font-size: 2em;
+            min-width: 600px;
+        }
 
-nav {
-    width: 100%;
-    background-color: #333;
-}
+        aside {
+            font-size: 1.5em;
+            margin-left: 50px;
+        }
+            table {
+                width: 400px;
+                background-color: rgba(52, 194, 222, 0.53);
+                padding: 20px;
+            }
+                table caption {
+                    font-size: 1.5em;
+                    font-weight: bold;
+                }
+                th, td {
+                    border-bottom: 1px solid rgba(51, 51, 51, 0.49);
+                }
+                th {
+                    text-align: left;
+                }
+                td {
+                    text-align: right;
+                }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
 
-ul li {
-    float: left;
-    padding: 10px 30px;
-    border-right: 3px solid rgb(0,132,87);
-    text-align: center;
-}
+    footer {
+        border: 1px solid black;
+        background-color:rgb(0,132,87);
+        margin: 0;
+    }
+        .internalNav {
+            width: 100%;
+            background-color: #333;
+        }
+            .internalNav ul {
+                list-style-type: none;
+                display: inline-block;
+                margin: 0;
+                padding: 0;
+            }
+                .internalNav ul li {
+                    float: left;
+                    padding: 10px 30px;
+                    border-right: 3px solid rgb(0,132,87);
+                    text-align: center;
+                }
+                    .internalNav ul li a {
+                        color: rgb(0,132,87);
+                        text-decoration: none;
+                    }
+        footer p {
+            color: #333;
+            text-align: center;
+        }
 
-ul li a {
-    color: rgb(0,132,87);
-    text-decoration: none;
-    font-size: 4vw;
-}
 
 ul li:hover {
     background-color: #111;
@@ -43,17 +146,38 @@ ul li:hover {
     border: none;
 }
 
-.externalNav {
-    position: absolute;
-    top: 0;
+@media screen and (max-width: 1300px) {
+    main {
+        flex-direction: column-reverse;
+    }
+        aside {
+            margin: 0;
+        }
+            aside table {
+                width: 100%;
+            }
+                aside table caption {
+                    text-align: left;
+                }
 }
 
-.internalNav {
-    position: absolute;
-    bottom: 0;
-}
-
-footer {
-    background-color:rgb(0,132,87);
-    overflow: hidden;
+@media screen and (max-width: 1100px) {
+    .hero {
+        flex-direction: column;
+    }
+        .her img {
+            margin: 0;
+        }
+        .title {
+            text-align: center;
+            margin: -50px 0 50px 0;
+        }
+            header h1 {
+                font-size: 3em;
+                min-width: 0;
+            }
+            header p {
+                font-size: 2em;
+                min-width: 0;
+            }
 }
