--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    border: 1px solid black;
     margin: 0;
     font-family: sans-serif;
 }
@@ -6,7 +7,7 @@ body {
         background-color:rgb(0,132,87);
     }
         .externalNav {
-            width: 100%;
+            width: 100vw;
             background-color: #333;
         }
             .externalNav ul {
@@ -51,7 +52,7 @@ body {
                     min-width: 800px;
                 }
         .internalNav {
-            width: 100%;
+            width: 100vw;
             background-color: #333;
         }
             .internalNav ul {
@@ -74,7 +75,7 @@ body {
 
     main {
         border: 5px solid #34C2DE;
-        margin: 15px;
+        margin: 1vw;
         padding: 100px;
         display: flex;
         flex-direction: row;
@@ -84,7 +85,6 @@ body {
             font-size: 2em;
             min-width: 600px;
         }
-
         aside {
             font-size: 1.5em;
             margin-left: 50px;
@@ -146,6 +146,7 @@ ul li:hover {
     border: none;
 }
 
+
 @media screen and (max-width: 1300px) {
     main {
         flex-direction: column-reverse;
@@ -165,7 +166,7 @@ ul li:hover {
     .hero {
         flex-direction: column;
     }
-        .her img {
+        .hero img {
             margin: 0;
         }
         .title {
@@ -181,3 +182,20 @@ ul li:hover {
                 min-width: 0;
             }
 }
+
+    @media screen and (max-width: 800px) {
+        .content {
+            min-width: 0;
+        }
+    }
+
+    @media screen and (max-width: 600px) {
+            .internalNav ul {
+                display: flex;
+                flex-direction: column;
+            }
+        main {
+            margin: 5px;
+            padding: 50px 10px;
+        }
+    }
