adding content for each page

--- a/info-style.css
+++ b/info-style.css
@@ -63,7 +63,7 @@
         bottom: 20px;
         right: 20px;
     }
-        #submit button {
+        #submit input {
             font-size: .75em;
         }
 
